change components alot of dumb thing which will review later 08/12/2021

--- a/src/main/resources/messages/validate.properties
+++ b/src/main/resources/messages/validate.properties
@@ -12,3 +12,6 @@ Duplicate.productForm.code=Duplicate products.
 
 NotFound.loginForm.account=Account not found.
 Disabled.loginForm.account=Account is disabled.
+
+userName.notempty=Please provide valid user name.
+password.notempty=Please provide valid password.
