--- a/src/main/resources/messages/validate.properties
+++ b/src/main/resources/messages/validate.properties
@@ -10,8 +10,10 @@ NotEmpty.productForm.code=Product code is required.
 Pattern.productForm.code=Product code is not valid.
 Duplicate.productForm.code=Duplicate products.
 
-NotFound.loginForm.account=Account not found.
+NotFound.loginForm.account=Account is not found.
 Disabled.loginForm.account=Account is disabled.
 
-userName.notempty=Please provide valid user name.
-password.notempty=Please provide valid password.
+NotEmpty.accountForm.userName=Username is required
+NotEmpty.accountForm.password=Password is required
+
+Duplicate.accountForm.userName=Username is already existed! Please create another one.
